[XForms] NPOTDB Insert and delete of a node can trigger value changed events to separate controls. Bug 393416, p=jlc r=olli+aaronr